TheMain complete layout

--- a/vue-dischi/src/style/main.scss
+++ b/vue-dischi/src/style/main.scss
@@ -1,1 +1,7 @@
 @import '~bootstrap/scss/bootstrap.scss';
+@import './variables.scss';
+
+#app {
+  background-color: $dark-blue;
+  height: 100vh;
+}
